sales-forecast-api/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forecast-api
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: forecast-api
    app.kubernetes.io/component: forecast-api
    app.kubernetes.io/instance: forecast-api
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: forecast-api
  type: ClusterIP
